// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should be allow some status  1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium is-disabled" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium is-shadow" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be render as a element 1`] = `
<button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
  <!---->
  <!---->
  <!---->Button
</button>
`;

exports[`Button should be support diferent types 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--success fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--success-default); --button-hover-color: var(--success-default);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--warning fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--warning-default); --button-hover-color: var(--warning-default);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--error fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--error-default); --button-hover-color: var(--error-default);">
    <!---->
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be support different sizes 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--mini " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--small " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--large " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--default fect-button--medium is-auto" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!---->
    <!---->Button
  </button></div>
`;

exports[`Button should be support icon 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium " style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <!---->
    <!----><span class="fect-button__icon"><svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision" style="color: currentColor;"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg></span>Button
  </button></div>
`;

exports[`Button should be support loadType and loadColor follow button color 1`] = `
<div class="container"><button class="fect-button fect-button--default fect-button--medium is-loading" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--primary-foreground); --button-hover-color: var(--primary-foreground);">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="loading"><i class="loading__default default medium"></i><i class="loading__default default medium"></i><i class="loading__default default medium"></i></span></div>
    </div>
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--success fect-button--medium is-loading" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--success-default); --button-hover-color: var(--success-default);">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="loading"><i class="loading__cube default medium"></i><i class="loading__cube default medium"></i><i class="loading__cube default medium"></i><i class="loading__cube default medium"></i></span></div>
    </div>
    <!---->
    <!---->Button
  </button><button class="fect-button fect-button--warning fect-button--medium is-loading" style="--button-hover-bg: var(--primary-background); --button-hover-border: var(--warning-default); --button-hover-color: var(--warning-default);">
    <div class="fect-button__loading">
      <div class="fect-loading"><span class="loading"><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i><i class="loading__wave default medium"></i></span></div>
    </div>
    <!---->
    <!---->Button
  </button></div>
`;
